Implemented Customer actions

--- a/SFMForFraudTransactions/Views/_ViewImports.cshtml
+++ b/SFMForFraudTransactions/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 @using Microsoft.AspNetCore.Identity
 @using SFMForFraudTransactions
 @using SFMForFraudTransactions.Models
+@using SFMForFraudTransactions.ViewModels
 @using SFMForFraudTransactions.ViewModels.AccountViewModels
 @using SFMForFraudTransactions.ViewModels.ManageViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
