--- a/SFMForFraudTransactions/Views/Customer/Create.cshtml
+++ b/SFMForFraudTransactions/Views/Customer/Create.cshtml
@@ -1,21 +1,23 @@
 ﻿@model CreateCustomerViewModel
 
 <h1>Create a Customer</h1>
-<form method="post">
-    <div class="form-group">
-        <label asp-for="Name"></label>
-        <input asp-for="Name" class="form-control" />
-        <span asp-validation-for="Name" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="InitialBalance"></label>
-        <input asp-for="InitialBalance" class="form-control" />
-        <span asp-validation-for="InitialBalance" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <input class="btn btn-primary" type="submit" name="save" value="Save" />
-    </div>
-</form>
+<div class="col-md-4">
+    <form method="post">
+        <div class="form-group">
+            <label asp-for="Name"></label>
+            <input asp-for="Name" class="form-control" autofocus="autofocus" />
+            <span asp-validation-for="Name" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="InitialBalance"></label>
+            <input asp-for="InitialBalance" class="form-control" />
+            <span asp-validation-for="InitialBalance" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <input class="btn btn-primary" type="submit" name="save" value="Save" />
+        </div>
+    </form>
+</div>
 
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
