Added validation to business model

--- a/SFMForFraudTransactions/Views/Customer/Detail.cshtml
+++ b/SFMForFraudTransactions/Views/Customer/Detail.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Customer
 
 <h1>@Model.Name</h1>
-<div>Balance: @Model.NewBalance</div>
+<div>Balance: @Model.Balance</div>
 <a asp-action="Index" asp-controller="Customer">Back to Customers list</a>
