--- a/SFMForFraudTransactions/Views/Customer/Index.cshtml
+++ b/SFMForFraudTransactions/Views/Customer/Index.cshtml
@@ -6,7 +6,7 @@
 {
     <section class="panel panel-default">
         <h3 class="panel-heading">Name: @customer.Name</h3>
-        <div class="panel-body">Balance: $@customer.NewBalance </div>
+        <div class="panel-body">Balance: $@customer.Balance </div>
         <div class="panel-footer">
             <a class="btn btn-default" asp-action="Detail" asp-route-id="@customer.Id">More</a>
         </div>
