--- a/SFMForFraudTransactions/Views/Transactions/Create.cshtml
+++ b/SFMForFraudTransactions/Views/Transactions/Create.cshtml
@@ -2,6 +2,7 @@
 
 <h1>Create Transaction</h1>
 
+<div class="alert alert-info" role="alert">Heads Up! Keep in mind that transactions are valid only if the customers exists in the database</div>
 <div class="col-md-4">
     <form method="post">
         <div class="form-group">
