--- a/SFMForFraudTransactions/Views/Transactions/Index.cshtml
+++ b/SFMForFraudTransactions/Views/Transactions/Index.cshtml
@@ -8,13 +8,19 @@
             <div class="container-fluid">
                 <div class="input-group">
                     <input class="form-control" asp-for="SearchTerm" placeholder="Search by Date, Name, Fraud" />
+                    <span class="input-group-addon">
+                        <i class="glyphicon glyphicon-search"></i>
+                    </span>
                 </div>
-                <button class="btn btn-primary" type="submit">
-                    <i class="glyphicon glyphicon-search"></i>
-                </button>
             </div>
         </form>
     </div>
+</div>
+<div class="container">
+    <p class="text-info">Write in the search bar and press <strong>Enter</strong> to search transactions</p>
+    <p class="text-info"><strong>Search by Fraud:</strong> eg True</p>
+    <p class="text-info"><strong>Search by Destination:</strong> eg C1666</p>
+    <p class="text-info"><strong>Search by date:</strong> eg 27/03/2018</p>
 </div>
 <hr />
 <table class="table table-striped">
@@ -22,7 +28,11 @@
         <th>Date</th>
         <th>Amount</th>
         <th>Origin Customer</th>
+        <th>Origin Old balance</th>
+        <th>Origin New balance</th>
         <th>Destination Customer</th>
+        <th>Destination Old Balance</th>
+        <th>Destination New Balance</th>
         <th>Type</th>
         <th>Is Fraud</th>
         <th>Is Flagged Fraud</th>
@@ -31,10 +41,14 @@
     @foreach (var transaction in Model.Transactions)
     {
         <tr>
-            <td>@String.Format("{0:dd/MM/yyyy}", transaction.Date)</td>
+            <td>@String.Format("{0:MM/dd/yyyy}", transaction.Date)</td>
             <td>@transaction.Amount</td>
             <td>@transaction.OriginCustomer.Name</td>
+            <td>@transaction.OldBalanceOrigin</td>
+            <td>@transaction.NewBalanceOrigin</td>
             <td>@transaction.DestinationCustomer.Name</td>
+            <td>@transaction.OldBalanceDestination</td>
+            <td>@transaction.NewBalanceDestination</td>
             <td>@transaction.TransactionType</td>
             <td>@transaction.IsFraud</td>
             <td>@transaction.IsFlaggedFraud</td>
