Misc Fixes and Added documentation and README file

--- a/SFMForFraudTransactions/Views/Transactions/Index.cshtml
+++ b/SFMForFraudTransactions/Views/Transactions/Index.cshtml
@@ -20,7 +20,7 @@
     <p class="text-info">Write in the search bar and press <strong>Enter</strong> to search transactions</p>
     <p class="text-info"><strong>Search by Fraud:</strong> eg True</p>
     <p class="text-info"><strong>Search by Destination:</strong> eg C1666</p>
-    <p class="text-info"><strong>Search by date:</strong> eg 27/03/2018</p>
+    <p class="text-info"><strong>Search by date:</strong> eg 27/03/2018 or 1 Jan 2018</p>
 </div>
 <hr />
 <table class="table table-striped">
