--- a/SFMForFraudTransactions/Views/Transactions/Edit.cshtml
+++ b/SFMForFraudTransactions/Views/Transactions/Edit.cshtml
@@ -1,15 +1,34 @@
 ﻿@model Transaction
 <h1>Edit Transaction</h1>
+
+<div class="container">
+    <div class="panel panel-default">
+        <!-- Default panel contents -->
+        <div class="panel-heading">Transaction Info</div>
+
+        <!-- Table -->
+        <table class="table">
+            <tr>
+                <th>Origin Customer</th>
+                <th>Origin Old Balance</th>
+                <th>Origin New Balance</th>
+                <th>Destination Customer</th>
+                <th>Destination Old Balance</th>
+                <th>Destination New Balance</th>
+            </tr>
+            <tr>
+                <td>@Model.OriginCustomer.Name</td>
+                <td>@Model.OldBalanceOrigin</td>
+                <td>@Model.NewBalanceOrigin</td>
+                <td>@Model.DestinationCustomer.Name</td>
+                <td>@Model.OldBalanceDestination</td>
+                <td>@Model.NewBalanceDestination</td>
+            </tr>
+        </table>
+    </div>
+</div>
 <div class="col-md-4">
     <form method="post">
-        <div class="form-group">
-            <label asp-for="@Model.OriginCustomer.Name"></label>
-            <input asp-for="@Model.OriginCustomer.Name" class="form-control" disabled />
-        </div>
-        <div class="form-group">
-            <label asp-for="@Model.DestinationCustomer.Name"></label>
-            <input asp-for="@Model.DestinationCustomer.Name" class="form-control" disabled />
-        </div>
         <div class="form-group">
             <label asp-for="@Model.Amount"></label>
             <input asp-for="@Model.Amount" class="form-control" disabled />
